--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,6 @@ body {
     .gohermo{
       color: #b45b35;
       text-align: center;
-      font-size: 100px;
+      /* font-size: 100px; */
       font-family: Edu NSW ACT Cursive;
     }
